Runtimes/ISpectrumNativeLib.Implementation.cs

// <<This file was autogenerated by NativeLibSourceGenerator>>
// <<This file is not mean to be read by human>>
#if UNITY_IOS
#define __IOS__
#endif
using NativeLibSourceGeneratorShared;
using System;
using System.Runtime.InteropServices;

using System.IO;
using System.Reflection;

namespace NeuroTech.Spectrum
{
    public sealed class SpectrumNativeLib
    {
        private static string GetApplicationRoot()
        {
            return Path.GetDirectoryName(Assembly.GetExecutingAssembly().Location) ?? string.Empty;
        }

        private static readonly Lazy<ISpectrumNativeLib> _api = new Lazy<ISpectrumNativeLib>(() =>
        {
            var platform = Platform.Type;
            try
            {
                switch (platform)
                {
                    case NativePlatformType.WinArm:
                    case NativePlatformType.WinArm64:
                    case NativePlatformType.WinX64:
                    case NativePlatformType.WinX86:
                        Environment.SetEnvironmentVariable("PATH", $"{ Path.Combine(GetApplicationRoot(), @"libs\windows") };{Environment.GetEnvironmentVariable("PATH")}"); // Not embed
                        break;
                    case NativePlatformType.LinuxArm:
                    case NativePlatformType.LinuxArm64:
                    case NativePlatformType.LinuxX64:
                    case NativePlatformType.LinuxX86:
                        Environment.SetEnvironmentVariable("PATH", $"{ Path.Combine(GetApplicationRoot(), @"libs\linux") };{Environment.GetEnvironmentVariable("PATH")}"); // Not embed
                        break;
                }
            }
            catch (Exception)
            {
                // ignore for IL2CPP
            }

            switch (platform)
            {
#if !__IOS__
                case NativePlatformType.WinArm:
                    return new WinArmImpl();
                case NativePlatformType.WinArm64:
                    return new WinArm64Impl();
                case NativePlatformType.WinX64:
                    return new WinX64Impl();
                case NativePlatformType.WinX86:
                    return new WinX86Impl();
                case NativePlatformType.AndroidARMv7:
                    return new AndroidARMv7Impl();
                case NativePlatformType.AndroidARMv8:
                    return new AndroidARMv8Impl();
                case NativePlatformType.AndroidX86:
                    return new AndroidX86Impl();
                case NativePlatformType.AndroidX64:
                    return new AndroidX64Impl();
                case NativePlatformType.OSX:
                    return new OSXImpl();
                case NativePlatformType.LinuxX64:
                    return new LinuxX64Impl();
                case NativePlatformType.LinuxX86:
                    return new LinuxX86Impl();
#endif
                case NativePlatformType.iOS:
#if __IOS__
                    return new iOSImpl();
#else
                    return new  DefaultImpl();
#endif
            }
            throw new NotSupportedException($"[OSDescription]:[{RuntimeInformation.OSDescription}]");
        });
        private SpectrumNativeLib() { }
        public static ISpectrumNativeLib Inst
        {
            get => _api.Value;
        }
    }
    
    public class DefaultImpl : ISpectrumNativeLib
    {
        
        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "createSpectrumMath")]
        private static extern IntPtr n_createSpectrumMath(int sampl_rate, int fft_window, int process_win_freq);
        public IntPtr createSpectrumMath(int sampl_rate, int fft_window, int process_win_freq)
        { 
           return DefaultImpl.n_createSpectrumMath( sampl_rate, fft_window, process_win_freq); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "freeSpectrumMath")]
        private static extern void n_freeSpectrumMath(IntPtr ptr);
        public void freeSpectrumMath(IntPtr ptr)
        { 
            DefaultImpl.n_freeSpectrumMath( ptr); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathInitParams")]
        private static extern void n_SpectrumMathInitParams(IntPtr ptr, int up_border_frequency, bool normalize_spect_by_bandwidth);
        public void SpectrumMathInitParams(IntPtr ptr, int up_border_frequency, bool normalize_spect_by_bandwidth)
        { 
            DefaultImpl.n_SpectrumMathInitParams( ptr, up_border_frequency, normalize_spect_by_bandwidth); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetFFTWinLengthAndProccessFreq")]
        private static extern void n_SpectrumMathSetFFTWinLengthAndProccessFreq(IntPtr ptr, int fft_win_length, int process_win_freq);
        public void SpectrumMathSetFFTWinLengthAndProccessFreq(IntPtr ptr, int fft_win_length, int process_win_freq)
        { 
            DefaultImpl.n_SpectrumMathSetFFTWinLengthAndProccessFreq( ptr, fft_win_length, process_win_freq); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetWavesCoeffs")]
        private static extern void n_SpectrumMathSetWavesCoeffs(IntPtr spectrumMathPtr, double d_coef, double t_coef, double a_coef, double b_coef, double g_coef);
        public void SpectrumMathSetWavesCoeffs(IntPtr spectrumMathPtr, double d_coef, double t_coef, double a_coef, double b_coef, double g_coef)
        { 
            DefaultImpl.n_SpectrumMathSetWavesCoeffs( spectrumMathPtr, d_coef, t_coef, a_coef, b_coef, g_coef); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetHanningWinSpect")]
        private static extern void n_SpectrumMathSetHanningWinSpect(IntPtr spectrumMathPtr);
        public void SpectrumMathSetHanningWinSpect(IntPtr spectrumMathPtr)
        { 
            DefaultImpl.n_SpectrumMathSetHanningWinSpect( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetHammingWinSpect")]
        private static extern void n_SpectrumMathSetHammingWinSpect(IntPtr spectrumMathPtr);
        public void SpectrumMathSetHammingWinSpect(IntPtr spectrumMathPtr)
        { 
            DefaultImpl.n_SpectrumMathSetHammingWinSpect( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathPushData")]
        private static extern void n_SpectrumMathPushData(IntPtr spectrumMathPtr, [In,Out] double[] samples, int sampleCount);
        public void SpectrumMathPushData(IntPtr spectrumMathPtr, [In,Out] double[] samples, int sampleCount)
        { 
            DefaultImpl.n_SpectrumMathPushData( spectrumMathPtr, samples, sampleCount); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathProcessData")]
        private static extern void n_SpectrumMathProcessData(IntPtr spectrumMathPtr);
        public void SpectrumMathProcessData(IntPtr spectrumMathPtr)
        { 
            DefaultImpl.n_SpectrumMathProcessData( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathComputeSpectrum")]
        private static extern void n_SpectrumMathComputeSpectrum(IntPtr spectrumMathPtr, [In,Out] double[] vals_arr, int arr_size);
        public void SpectrumMathComputeSpectrum(IntPtr spectrumMathPtr, [In,Out] double[] vals_arr, int arr_size)
        { 
            DefaultImpl.n_SpectrumMathComputeSpectrum( spectrumMathPtr, vals_arr, arr_size); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathGetFFTBinsFor1Hz")]
        private static extern double n_SpectrumMathGetFFTBinsFor1Hz(IntPtr spectrumMathPtr);
        public double SpectrumMathGetFFTBinsFor1Hz(IntPtr spectrumMathPtr)
        { 
           return DefaultImpl.n_SpectrumMathGetFFTBinsFor1Hz( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathGetFFTWindow")]
        private static extern int n_SpectrumMathGetFFTWindow(IntPtr spectrumMathPtr);
        public int SpectrumMathGetFFTWindow(IntPtr spectrumMathPtr)
        { 
           return DefaultImpl.n_SpectrumMathGetFFTWindow( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReadRawSpectrumInfo")]
        private static extern void n_SpectrumMathReadRawSpectrumInfo(IntPtr spectrumMathPtr, ref NativeRawSpectrumData raw_spect_data);
        public void SpectrumMathReadRawSpectrumInfo(IntPtr spectrumMathPtr, ref NativeRawSpectrumData raw_spect_data)
        { 
            DefaultImpl.n_SpectrumMathReadRawSpectrumInfo( spectrumMathPtr,ref raw_spect_data); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReadWavesSpectrumInfo")]
        private static extern void n_SpectrumMathReadWavesSpectrumInfo(IntPtr spectrumMathPtr, ref WavesSpectrumData waves_spect_data);
        public void SpectrumMathReadWavesSpectrumInfo(IntPtr spectrumMathPtr, ref WavesSpectrumData waves_spect_data)
        { 
            DefaultImpl.n_SpectrumMathReadWavesSpectrumInfo( spectrumMathPtr,ref waves_spect_data); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReadSpectrumArrSize")]
        private static extern uint n_SpectrumMathReadSpectrumArrSize(IntPtr spectrumMathPtr);
        public uint SpectrumMathReadSpectrumArrSize(IntPtr spectrumMathPtr)
        { 
           return DefaultImpl.n_SpectrumMathReadSpectrumArrSize( spectrumMathPtr); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReadRawSpectrumInfoArr")]
        private static extern void n_SpectrumMathReadRawSpectrumInfoArr(IntPtr spectrumMathPtr, [In,Out] NativeRawSpectrumData[] raw_spect_data_arr, ref uint arr_size);
        public void SpectrumMathReadRawSpectrumInfoArr(IntPtr spectrumMathPtr, [In,Out] NativeRawSpectrumData[] raw_spect_data_arr, ref uint arr_size)
        { 
            DefaultImpl.n_SpectrumMathReadRawSpectrumInfoArr( spectrumMathPtr, raw_spect_data_arr,ref arr_size); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathReadWavesSpectrumInfoArr")]
        private static extern void n_SpectrumMathReadWavesSpectrumInfoArr(IntPtr spectrumMathPtr, [In,Out] WavesSpectrumData[] waves_spect_data_arr, ref uint arr_size);
        public void SpectrumMathReadWavesSpectrumInfoArr(IntPtr spectrumMathPtr, [In,Out] WavesSpectrumData[] waves_spect_data_arr, ref uint arr_size)
        { 
            DefaultImpl.n_SpectrumMathReadWavesSpectrumInfoArr( spectrumMathPtr, waves_spect_data_arr,ref arr_size); 
        }

        [DllImport(LibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "SpectrumMathSetNewSampleSize")]
        private static extern void n_SpectrumMathSetNewSampleSize(IntPtr spectrumMathPtr);
        public void SpectrumMathSetNewSampleSize(IntPtr spectrumMathPtr)
        { 
            DefaultImpl.n_SpectrumMathSetNewSampleSize( spectrumMathPtr); 
        }
